--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -47,10 +46,10 @@
 
       <ul>
   <li>👋 Hi, I’m @masakanbikin</li>
-  <li>👀 I’m interested in …</li>
-  <li>🌱 I’m currently learning …</li>
-  <li>💞️ I’m looking to collaborate on …</li>
-  <li>📫 How to reach me …</li>
+  <li>👀 I’m interested in <a href='https://masakanbikin.github.io/'>Masakan Bikin</a></li>
+  <li>🌱 I’m currently learning <a href='https://bikinmasak.web.app/'>Bikin Masak</a></li>
+  <li>💞️ I’m looking to collaborate on <a href='https://bikinmasakan.blogspot.com/'>Bikin Masakan</a></li>
+  <li>📫 How to reach me <a href='https://masakanbikin.github.io/'>Masakan Bikin</a></li>
 </ul>
 
     </div>
