--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
      
-      <h1><a href="https://masakanbikin.github.io/">masakanbikin.github.io</a></h1>
+      <h1><a href="https://masakanbikin.github.io/">Masakan Bikin</a></h1>
 
       <ul>
   <li>👋 Hi, I’m @masakanbikin</li>
